# Cloud-CTI-Checkup

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: ai.local.yaml  example.yaml  export.local.yaml  local.yaml  ready.yaml
cti_checkup/: cli.py
cti_checkup/ai/: __init__.py  baseline.py  cli.py  config.py  indicators.py  models.py
cti_checkup/aws/: __init__.py  iam_identity_profile.py
cti_checkup/core/: config.py  config_utils.py  exit_codes.py  finding_id.py  models.py  output.py  redact.py  risk.py
cti_checkup/eval/: __init__.py  cli.py  config.py  models.py  runner.py  scorer.py
cti_checkup/export/: __init__.py  detections.py
cti_checkup/intel/: __init__.py  cloud_attribution.py  config.py  domain.py  ip.py  virustotal.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/server/: index.js  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
schemas/: scan_result.schema.json
terraform/: .gitignore  1-misconfigured.tf  2-fixed.tf  README.md  versions.tf
tests/: __init__.py  test_ai_cloudtrail_summary.py  test_ai_providers.py  test_cloud_attribution.py  test_cloudtrail_correlation.py  test_config_utils.py  test_ec2_sg_exposure.py  test_ec2_unused_sg.py  test_eval.py  test_export_detections.py  test_finding_id.py  test_iam_admin_policies.py  test_iam_basic.py  test_iam_identity_profile.py  test_indicators.py  test_integration.py  test_redaction.py  test_risk.py  test_s3_encryption.py  test_s3_public.py  test_scan_result_schema.py  test_virustotal.py
(+85 files in other folders)
