[project]
name = "cti-checkup"
version = "0.1.0"
description = "CTI-Checkup CLI (AWS cloud posture MVP)"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "boto3>=1.34.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "jsonschema>=4.0.0",
]

[project.scripts]
cti-checkup = "cti_checkup.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cti_checkup*"]
exclude = ["config*", "tests*"]

[tool.ruff]
line-length = 100
